Illustratr: Fix RTL responsive menu bad alignment

--- a/illustratr/style.css
+++ b/illustratr/style.css
@@ -1038,6 +1038,9 @@ Menu
     min-height: 38px;
     border-bottom: 1px solid #f1f2f3;
     line-height: 18px; }
+  .main-navigation ul li:first-child, .main-navigation ul li:last-child {
+    margin-left: 0;
+    margin-right: 0; }
   .main-navigation ul li a {
     padding: 0; }
   .main-navigation ul li a:hover, .main-navigation ul li a:focus, .main-navigation ul li a:active {
